port ContinentMaskingProvider to new API
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>